Added User view profile
