# src/router/userRouter.js
@@ -1,11 +1,11 @@
 import express from "express"
 import { isUserAuthorized } from "../middlewares/userAuthorization.js";
-import { userUpdateProfile } from "../modules/user/controller/userController.js";
+import { userUpdateProfile, userViewProfile } from "../modules/user/controller/userController.js";
 import { bodyValidation } from "../middlewares/validations.js";
 import { updateUserSchema } from "../modules/user/validations/userValidations.js";
 const router = express.Router()
 
 
-router.put("/user-update-profile", bodyValidation(updateUserSchema), isUserAuthorized(['customer', 'admin']), userUpdateProfile);
-
+router.put("/user-update-profile",isUserAuthorized(['customer', 'admin']),bodyValidation(updateUserSchema), userUpdateProfile);
+router.get("/user-view-profile",isUserAuthorized(['customer', 'admin']),userViewProfile)
 export default router
